--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button class="btn2">Sum</button>
         </div>-->
         <h1>Enter 2 numbers to calculate their Sum:</h1>
-        <form action="/sum" name="MyForm" method="GET" data-netlify="true" id="form">
+        <form action="../sum" name="MyForm" method="GET" data-netlify="true" id="form">
             <label for="no1">First Number:</label><br>
             <input type="number" id="no1" name="First_Number"><br>
             <label for="no2">Second Number:</label><br>
