--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
             <button class="btn2">Sum</button>
         </div>-->
         <h1>Enter 2 numbers to calculate their Sum:</h1>
-        <form action="../sum" name="MyForm" method="GET" data-netlify="true" id="form">
+       <!--<form action="../sum" name="MyForm" method="GET" data-netlify="true" id="form">-->
+        <form name="MyForm" method="GET" data-netlify="true" id="form" onsubmit="sumtest(event)">
             <label for="no1">First Number:</label><br>
             <input type="number" id="no1" name="First_Number"><br>
             <label for="no2">Second Number:</label><br>
             <input type="number" id="no2" name="Second_Number"><br><br>
-            <input type="submit" value="Submit">
+            <input type="submit" value="submit"><br><br>
+            <label for="sum">Sum:</label><br>
+            <input type="sum" id="sum" name="Sum"><br>
         </form>
-        <!--<script src="app.js"></script>-->
+        <p id="log"></p>
+        <script src="app.js"></script>
         <noscript>You need to enable Javascript to view the full site</noscript>
     </body>
 </html>
